sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:20: error: not found: value baseDepart
        baseDepart=getTrouBase()
        ^SelectBaseball:21: error: not found: value poseDepart
        poseDepart=(getTrouPosition()+1)%2
        ^SelectBaseball:22: error: not found: value baseDepart
          ameneJoueur(baseDepart, posDepart, base, 0)
                      ^SelectBaseball:22: error: not found: value posDepart
          ameneJoueur(baseDepart, posDepart, base, 0)
                                  ^SelectBaseball:29: error: constructor cannot be instantiated to expected type;
 found   : (T1, T2)
 required: Unit
          case (baseDepart,posDepart) => ameneJoueur(baseDepart, posDepart, base, 1)
               ^